Turned confluence theorem into conjecture
Also added some comments about what is needed in order to make it a theorem again.

--- a/defs.tex
+++ b/defs.tex
@@ -23,6 +23,7 @@
 
 \theoremstyle{remark}
 \newtheorem{remark}[theorem]{Remark}
+\newtheorem{conjecture}[theorem]{Conjecture}
 
 %-------------------------------------------
 % Make sure the numbering of theorems are reset
