--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -1,1 +1,7 @@
-\TODO{}
+I was first introduced to proof theory by my supervisor, Alessio Guglielmi, and for this I suppose I ought to be grateful. Should anyone reading this be considering a PhD in proof theory, then I urge you to give Alessio a call, as he truly is the most wonderful supervisor.
+
+Furthermore, I wish to thank Alessio and Paola Bruscoli for looking after me when I moved to France. You have both been like mothers to me.
+
+I would also like to express my gratitude to all my colleagues, too many to name, who have been influential in the shaping of this thesis. Two people deserve special mention: Alessio, for teaching me what I know, and my examiner, Fran\c{c}osi Lamarche, for his thorough and insightful comments.
+
+Finally, I wish to thank my friends and family for providing me with an endless source of entertainment throughout the course of my studies. In particular, I want to thank my husband John for his love and support. If some of my sanity remains, it is thanks to you.
