Added by-nc-sa license and removed nonsense

--- a/thesis.tex
+++ b/thesis.tex
@@ -65,6 +65,7 @@
 \title{A General View of Normalisation through Atomic Flows}
 \degreeyear{August 2009}
 \norestrictions
+\copyleft
 
 \begin{document}
 \bibliographystyle{alpha}
