--- a/baththesis.sty
+++ b/baththesis.sty
@@ -22,6 +22,8 @@
 
 \footskip .4in
 
+\usepackage{ccicons,url}
+
 %% The regs say we must have a minimum of one and a half line
 %% spacing.  For this we use the setspace style which is supposed to
 %% work with any dialect of LaTeX---well, it did after fucking with
@@ -38,8 +40,9 @@
 \def\and{\gdef\@degreeword{degrees} \par and \par}
 \def\degreeyear#1{\gdef\@degreeyear{#1}}
 
-\def\@standardcopyright{Attention is drawn to the fact that copyright of this thesis rests with its author.  A copy of this thesis has been supplied on condition that anyone who consults it is understood to recognise that its copyright rests with the author and they must not copy it or use material from it except as permitted by law or with the consent of the author. 
-}
+\def\standardcopyright{\gdef\@copyright{Attention is drawn to the fact that copyright of this thesis rests with its author.  A copy of this thesis has been supplied on condition that anyone who consults it is understood to recognise that its copyright rests with the author and they must not copy it or use material from it except as permitted by law or with the consent of the author.}}
+
+\def\copyleft{\gdef\@copyright{\ccbyncsaeu\ This work is licensed under the Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License. To view a copy of this license, visit\ \url{http://creativecommons.org/licenses/by-nc-sa/3.0/} or send a letter to Creative Commons, 171 Second Street, Suite 300, San Francisco, California, 94105, USA.}}
 
 \def\norestrictions{\gdef\@restriction{This thesis may be made available for consultation within the University Library and may be photocopied or lent to other libraries for the purposes of consultation.}}
 
@@ -80,14 +83,14 @@ Department of Computer Science
 \begin{center}
 \bf COPYRIGHT
 \end{center}
-\@standardcopyright
+\@copyright
 
-\noindent\@restriction
-\vfill
-\begin{center} 
-\signature{Signature of Author}{\@author}
-\vfill
-\end{center}
+% \noindent\@restriction
+% \vfill
+% \begin{center} 
+% \signature{Signature of Author}{\@author}
+% \vfill
+% \end{center}
 % The \kern0pt pushes any depth into the height.  Thanks to Richard Stone.
 \par\kern 0pt\null
 \end{titlepage}}
