Fixed phrasing of license

--- a/baththesis.sty
+++ b/baththesis.sty
@@ -42,7 +42,7 @@
 
 \def\standardcopyright{\gdef\@copyright{Attention is drawn to the fact that copyright of this thesis rests with its author.  A copy of this thesis has been supplied on condition that anyone who consults it is understood to recognise that its copyright rests with the author and they must not copy it or use material from it except as permitted by law or with the consent of the author.}}
 
-\def\copyleft{\gdef\@copyright{\ccbyncsaeu\ This work is licensed under the Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License. To view a copy of this license, visit\ \url{http://creativecommons.org/licenses/by-nc-sa/3.0/} or send a letter to Creative Commons, 171 Second Street, Suite 300, San Francisco, California, 94105, USA.}}
+\def\copyleft{\gdef\@copyright{\ccbyncsaeu\ Attention is drawn to the fact that copyright of this thesis rests with its author. This thesis is licensed under the Creative Commons Attribution-NonCommercial-ShareAlike 3.0 Unported License. To view a copy of this license, visit~\url{http://creativecommons.org/licenses/by-nc-sa/3.0/} or send a letter to Creative Commons, 171 Second Street, Suite 300, San Francisco, California, 94105, USA.}}
 
 \def\norestrictions{\gdef\@restriction{This thesis may be made available for consultation within the University Library and may be photocopied or lent to other libraries for the purposes of consultation.}}
 
