--- a/thesis.tex
+++ b/thesis.tex
@@ -63,7 +63,7 @@
 \degree{Doctor of Philosophy}
 \author{Tom Erik Gundersen}
 \title{A General View of Normalisation through Atomic Flows}
-\degreeyear{August 2009}
+\degreeyear{2010}
 \norestrictions
 \copyleft
 
