a nearly finished draft

--- a/di-biblio.bib
+++ b/di-biblio.bib
@@ -2,51 +2,102 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Alessio Guglielmi at 2009-10-16 08:36:38 +0200 
+%% Created for Alessio Guglielmi at 2011-05-05 10:13:43 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
-@unpublished{BlutPanaSlav:09:Deep-Inf:kb,
+@article{BlutPanaSlav:09:Deep-Inf:kb,
 	Author = {Blute, Richard and Panangaden, Prakash and Slavnov, Sergey},
 	Date-Added = {2009-03-19 15:12:35 +0100},
-	Date-Modified = {2009-03-19 15:14:26 +0100},
+	Date-Modified = {2011-04-16 12:14:41 +0100},
+	Journal = {Applied Categorical Structures},
 	Keywords = {deep inference},
-	Note = {Submitted. \url{http://www.cs.mcgill.ca/~prakash/Pubs/seqcats.pdf}},
+	Note = {In press. \url{http://www.cs.mcgill.ca/~prakash/Pubs/seqcats.pdf}},
 	Title = {Deep Inference and Probabilistic Coherence Spaces},
-	Year = {2009}}
+	Year = {2011}}
+
+@unpublished{BlutGuglIvanPana:10:A-Logica:uq,
+	Author = {Blute, Richard F. and Guglielmi, Alessio and Ivanov, Ivan T. and Panangaden, Prakash and Stra{\ss}burger, Lutz},
+	Date-Added = {2010-06-01 10:20:30 +0200},
+	Date-Modified = {2010-06-01 10:41:06 +0200},
+	Keywords = {deep inference},
+	Note = {Submitted},
+	Title = {A Logical Basis for Quantum Evolution and Entanglement},
+	Year = {2010}}
 
 @inproceedings{BlutPanaStra:08:The-Logi:lh,
-	Author = {Blute, Richard and Panangaden, Prakash and Stra{\ss}burger, Lutz},
+	Author = {Blute, Rick and Panangaden, Prakash and Stra{\ss}burger, Lutz},
 	Booktitle = {Trends in Logic {VI}: {L}ogic and the Foundations of Physics: {S}pace, Time and Quanta},
 	Date-Added = {2009-03-19 14:38:26 +0100},
-	Date-Modified = {2009-03-19 14:43:42 +0100},
+	Date-Modified = {2010-06-01 10:41:44 +0200},
 	Keywords = {deep inference},
 	Note = {\url{http://www.lix.polytechnique.fr/~lutz/papers/BVlocative.pdf}},
 	Title = {The Logic {BV} and Quantum Causality},
 	Year = {2008}}
 
+@inproceedings{Brun:10:How-to-U:kx,
+	Author = {Br{\"u}nnler, Kai},
+	Booktitle = {LPAR-17},
+	Date-Added = {2010-11-28 17:53:20 +0000},
+	Date-Modified = {2010-11-28 18:02:24 +0000},
+	Editor = {Ferm{\"u}ller, Christian G. and Voronkov, Andrei},
+	Keywords = {deep inference},
+	Note = {\url{http://www.iam.unibe.ch/~kai/Papers/2010hucer.pdf}},
+	Pages = {172--186},
+	Publisher = {Springer-Verlag},
+	Series = {Lecture Notes in Computer Science},
+	Title = {How to Universally Close the Existential Rule},
+	Volume = {6397},
+	Year = {2010}}
+
+@inproceedings{BrunGoetKuzn:10:A-Syntac:uq,
+	Author = {Br{\"u}nnler, Kai and Goetschi, Remo and Kuznets, Roman},
+	Booktitle = {Advances in Modal Logic},
+	Date-Added = {2010-11-28 17:17:19 +0000},
+	Date-Modified = {2010-11-28 17:24:57 +0000},
+	Editor = {Lev Beklemishev and Valentin Goranko and Valentin Shehtman},
+	Keywords = {deep inference},
+	Note = {\url{http://www.iam.unibe.ch/~kai/Papers/2010srtjl.pdf}},
+	Pages = {39--58},
+	Publisher = {College Publications},
+	Title = {A Syntactic Realization Theorem for Justification Logics},
+	Volume = {8},
+	Year = {2010}}
+
+@unpublished{Brun:10:Nested-S:fk,
+	Author = {Br{\"u}nnler, Kai},
+	Date-Added = {2010-04-13 18:27:25 +0200},
+	Date-Modified = {2011-01-25 16:40:12 +0000},
+	Keywords = {deep inference},
+	Note = {Habilitation Thesis. \url{http://arxiv.org/pdf/1004.1845}},
+	School = {Universit{\"a}t Bern},
+	Title = {Nested Sequents},
+	Year = {2010}}
+
 @inproceedings{BrunStra:09:Modular-:ys,
 	Author = {Br{\"u}nnler, Kai and Stra{\ss}burger, Lutz},
 	Booktitle = {Tableaux 2009},
 	Date-Added = {2009-05-08 16:15:49 +0200},
-	Date-Modified = {2009-06-12 06:34:01 +0200},
+	Date-Modified = {2010-04-13 19:31:52 +0200},
 	Keywords = {deep inference},
-	Note = {In press. \url{http://www.iam.unibe.ch/~kai/Papers/2009mssml.pdf}},
+	Note = {\url{http://www.iam.unibe.ch/~kai/Papers/2009mssml.pdf}},
+	Pages = {152--166},
 	Publisher = {Springer-Verlag},
-	Series = {Lecture Notes in Computer Science},
+	Series = {Lecture Notes in Artificial Intelligence},
 	Title = {Modular Sequent Systems for Modal Logic},
+	Volume = {5607},
 	Year = {2009}}
 
 @article{BrunStud:09:Syntacti:yq,
 	Author = {Br{\"u}nnler, Kai and Studer, Thomas},
 	Date-Added = {2009-05-06 13:13:02 +0200},
-	Date-Modified = {2009-05-06 13:19:24 +0200},
+	Date-Modified = {2010-04-13 18:49:21 +0200},
 	Journal = {Annals of Pure and Applied Logic},
 	Keywords = {deep inference},
-	Note = {\url{http://dx.doi.org/10.1016/j.apal.2009.01.014}},
+	Note = {\url{http://www.iam.unibe.ch/~kai/Papers/infck.pdf}},
 	Pages = {82--95},
 	Publisher = {Elsevier},
 	Title = {Syntactic Cut-Elimination for Common Knowledge},
@@ -57,8 +108,8 @@
 	Author = {Br{\"u}nnler, Kai and McKinley, Richard},
 	Booktitle = {LPAR 2008},
 	Date-Added = {2008-07-01 12:05:07 +0100},
-	Date-Modified = {2008-11-25 07:36:02 +0100},
-	Editor = {Cervesato, I. and Veith, H. and Voronkov, A.},
+	Date-Modified = {2010-12-15 19:03:24 +0000},
+	Editor = {Cervesato, Iliano and Veith, Helmut and Voronkov, Andrei},
 	Keywords = {deep inference},
 	Note = {\url{http://www.iam.unibe.ch/~kai/Papers/2008aidis.pdf}},
 	Pages = {482---496},
@@ -83,23 +134,26 @@
 	Volume = {231},
 	Year = {2009}}
 
-@unpublished{Brun:07:Deep-Seq:fk,
+@article{Brun:07:Deep-Seq:fk,
 	Author = {Br{\"u}nnler, Kai},
 	Date-Added = {2007-08-26 10:54:46 +0100},
-	Date-Modified = {2007-08-26 11:09:25 +0100},
+	Date-Modified = {2010-04-13 19:17:37 +0200},
+	Journal = {Archive for Mathematical Logic},
 	Keywords = {deep inference},
-	Note = {\url{http://www.iam.unibe.ch/~kai/Current/dsm-long.pdf}},
+	Note = {\url{http://www.iam.unibe.ch/~kai/Papers/2009dssml.pdf}},
+	Number = {6},
+	Pages = {551--577},
 	Title = {Deep Sequent Systems for Modal Logic},
-	Year = {2007}}
+	Volume = {48},
+	Year = {2009}}
 
 @inproceedings{Brun:06:Deep-Inf:qy,
 	Author = {Br{\"u}nnler, Kai},
-	Booktitle = {Computability in Europe 2006},
+	Booktitle = {Logical Approaches to Computational Barriers---2nd Conference on Computability in Europe},
 	Date-Added = {2006-07-16 14:57:44 +0100},
-	Date-Modified = {2006-07-16 15:32:28 +0100},
+	Date-Modified = {2010-07-17 19:46:08 +0200},
 	Editor = {Beckmann, Arnold and Berger, Ulrich and L{\"o}we, Benedikt and Tucker, John V.},
 	Keywords = {deep inference},
-	Month = {July},
 	Note = {\url{http://www.iam.unibe.ch/~kai/Papers/n.pdf}},
 	Pages = {65--74},
 	Publisher = {Springer-Verlag},
@@ -197,8 +251,8 @@
 @inproceedings{BrunTiu:01:A-Local-:mz,
 	Author = {Br{\"u}nnler, Kai and Tiu, Alwen Fernanto},
 	Booktitle = {LPAR 2001},
-	Date-Modified = {2009-06-12 06:33:55 +0200},
-	Editor = {R. Nieuwenhuis and A. Voronkov},
+	Date-Modified = {2010-12-15 19:03:24 +0000},
+	Editor = {R. Nieuwenhuis and Voronkov, Andrei},
 	Keywords = {deep inference},
 	Note = {\url{http://www.iam.unibe.ch/~kai/Papers/lcl-lpar.pdf}},
 	Pages = {347--361},
@@ -242,12 +296,45 @@
 	Title = {On Two Forms of Bureaucracy in Derivations},
 	Year = 2005}
 
+@inproceedings{BrusGuglGundPari:09:A-Quasip:fk,
+	Author = {Bruscoli, Paola and Guglielmi, Alessio and Gundersen, Tom and Parigot, Michel},
+	Booktitle = {LPAR-16},
+	Date-Added = {2011-05-04 17:41:54 +0100},
+	Date-Modified = {2011-05-04 17:41:54 +0100},
+	Editor = {Clarke, Edmund M. and Voronkov, Andrei},
+	Keywords = {deep inference},
+	Note = {\url{http://cs.bath.ac.uk/ag/p/QPNDI.pdf}},
+	Pages = {136--153},
+	Publisher = {Springer-Verlag},
+	Series = {Lecture Notes in Computer Science},
+	Title = {A Quasipolynomial Cut-Elimination Procedure in Deep Inference via Atomic Flows and Threshold Formulae},
+	Volume = {6355},
+	Year = {2010}}
+
+@unpublished{BrusGuglGundPari:11:A-Quasip:uq,
+	Author = {Bruscoli, Paola and Guglielmi, Alessio and Gundersen, Tom and Parigot, Michel},
+	Date-Added = {2010-01-25 08:58:41 +0100},
+	Date-Modified = {2011-05-04 17:45:23 +0100},
+	Keywords = {deep inference},
+	Note = {Submitted. \url{http://cs.bath.ac.uk/ag/p/QPNPDI.pdf}},
+	Title = {A Quasipolynomial Normalisation Procedure in Deep Inference},
+	Year = {2011}}
+
+@unpublished{BrusGugl:09:On-Analy:kx,
+	Author = {Bruscoli, Paola and Guglielmi, Alessio},
+	Date-Added = {2009-11-23 23:46:58 +0100},
+	Date-Modified = {2009-11-23 23:48:53 +0100},
+	Keywords = {deep inference},
+	Note = {\url{http://cs.bath.ac.uk/ag/p/ADI.pdf}},
+	Title = {On Analyticity in Deep Inference},
+	Year = {2009}}
+
 @unpublished{BrusGuglGundPari:09:Quasipol:kx,
 	Author = {Bruscoli, Paola and Guglielmi, Alessio and Gundersen, Tom and Parigot, Michel},
 	Date-Added = {2009-03-25 12:29:53 +0100},
-	Date-Modified = {2009-04-05 09:28:13 +0200},
+	Date-Modified = {2010-01-25 09:00:25 +0100},
 	Keywords = {deep inference},
-	Note = {Submitted. \url{http://cs.bath.ac.uk/ag/p/QuasiPolNormDI.pdf}},
+	Note = {\url{http://cs.bath.ac.uk/ag/p/QuasiPolNormDI.pdf}},
 	Title = {Quasipolynomial Normalisation in Deep Inference via Atomic Flows and Threshold Formulae},
 	Year = {2009}}
 
@@ -276,10 +363,9 @@
 @inproceedings{Brus:02:A-purely:nx,
 	Author = {Bruscoli, Paola},
 	Booktitle = {17. WLP: Workshop Logische Programmierung, {TU} {D}resden, {D}ecember 11--13, 2002},
-	Date-Modified = {2006-07-16 11:32:02 +0100},
+	Date-Modified = {2010-07-17 19:47:16 +0200},
 	Editor = {Bertram Fronh{\"o}fer and Steffen H{\"o}lldobler},
 	Keywords = {deep inference},
-	Month = {April},
 	Note = {ISSN 1430--211X},
 	Number = {TUD--FI03--03},
 	Organization = {TU Dresden, 01062 Dresden},
@@ -301,6 +387,19 @@
 	Volume = 2401,
 	Year = 2002}
 
+@inproceedings{Das:11:On-the-P:fk,
+	Author = {Das, Anupam},
+	Booktitle = {Tableaux 2011},
+	Date-Added = {2011-05-04 11:55:58 +0100},
+	Date-Modified = {2011-05-04 12:01:04 +0100},
+	Editor = {Br{\"u}nnler, Kai and Metcalfe, George},
+	Keywords = {deep inference},
+	Note = {In press},
+	Publisher = {Springer-Verlag},
+	Series = {Lecture Notes in Artificial Intelligence},
+	Title = {On the Proof Complexity of Cut-Free Bounded Deep Inference},
+	Year = {2011}}
+
 @inproceedings{Di-G:04:Structur:wy,
 	Author = {Di Gianantonio, Pietro},
 	Booktitle = {CSL 2004},
@@ -315,16 +414,42 @@
 	Volume = 3210,
 	Year = 2004}
 
+@article{GorePostTiu:11:On-the-C:fk,
+	Author = {Rajeev Gor{\'e} and Linda Postniece and Alwen Tiu},
+	Date-Added = {2011-05-05 07:11:03 +0100},
+	Date-Modified = {2011-05-05 07:14:17 +0100},
+	Journal = {Mathematical Structures in Computer Science},
+	Keywords = {deep inference},
+	Note = {In press. \url{http://arxiv.org/pdf/1103.5286}},
+	Title = {On the Correspondence Between Display Postulates and Deep Inference in Nested Sequent Calculi for Tense Logics},
+	Year = {2011}}
+
+@inproceedings{GorePostTiu:10:Cut-Elim:vn,
+	Author = {Rajeev Gor{\'e} and Linda Postniece and Tiu, Alwen},
+	Booktitle = {Advances in Modal Logic},
+	Date-Added = {2010-11-28 18:18:12 +0000},
+	Date-Modified = {2010-11-28 18:30:58 +0000},
+	Editor = {Lev Beklemishev and Valentin Goranko and Valentin Shehtman},
+	Keywords = {deep inference},
+	Note = {\url{http://www.aiml.net/volumes/volume8/Gore-Postniece-Tiu.pdf}},
+	Pages = {156--177},
+	Publisher = {College Publications},
+	Title = {Cut-Elimination and Proof Search for Bi-Intuitionistic Tense Logic},
+	Volume = {8},
+	Year = {2010}}
+
 @inproceedings{GorePostTiu:09:Taming-D:rt,
 	Author = {Rajeev Gor{\'e} and Linda Postniece and Alwen Tiu},
 	Booktitle = {Tableaux 2009},
 	Date-Added = {2009-05-08 15:46:50 +0200},
-	Date-Modified = {2009-06-12 06:34:07 +0200},
+	Date-Modified = {2010-04-13 19:32:29 +0200},
 	Keywords = {deep inference},
-	Note = {In press. \url{http://users.rsise.anu.edu.au/~tiu/papers/kt.pdf}},
+	Note = {\url{http://users.cecs.anu.edu.au/~tiu/papers/kt.pdf}},
+	Pages = {189--204},
 	Publisher = {Springer-Verlag},
-	Series = {Lecture Notes in Computer Science},
+	Series = {Lecture Notes in Artificial Intelligence},
 	Title = {Taming Displayed Tense Logics Using Nested Sequents With Deep Inference},
+	Volume = {5607},
 	Year = {2009}}
 
 @inproceedings{GorePostTiu:08:Cut-Elim:yq,
@@ -347,12 +472,55 @@
 	Date-Modified = {2007-08-31 22:24:12 +0100},
 	Journal = {Journal of Logic and Computation},
 	Keywords = {deep inference},
-	Note = {\url{http://users.rsise.anu.edu.au/~tiu/papers/cmdl.pdf}},
+	Note = {\url{http://users.cecs.anu.edu.au/~tiu/papers/cmdl.pdf}},
 	Number = {4},
 	Pages = {767--794},
 	Title = {Classical Modal Display Logic in the Calculus of Structures and Minimal Cut-free Deep Inference Calculi for {S5}},
 	Volume = {17},
 	Year = {2007}}
+
+@inproceedings{Guen:10:Focused-:uq,
+	Author = {Guenot, Nicolas},
+	Booktitle = {Technical Communications of the 26th International Conference on Logic Programming},
+	Date-Added = {2011-05-05 09:50:18 +0100},
+	Date-Modified = {2011-05-05 09:54:22 +0100},
+	Editor = {Manuel Hermenegildo and Torsten Schaub},
+	Keywords = {deep inference},
+	Note = {\url{http://drops.dagstuhl.de/opus/volltexte/2010/2586/pdf/10003.GuenotNicolas.2586.pdf}},
+	Pages = {84--93},
+	Publisher = {Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik},
+	Series = {Leibniz International Proceedings in Informatics (LIPIcs)},
+	Title = {Focused Proof Search for Linear Logic in the Calculus of Structures},
+	Volume = {7},
+	Year = {2010}}
+
+@inproceedings{GuglGundPari::A-Proof-:fk,
+	Author = {Guglielmi, Alessio and Gundersen, Tom and Parigot, Michel},
+	Booktitle = {21st International Conference on Rewriting Techniques and Applications},
+	Date-Added = {2010-03-15 22:31:13 +0100},
+	Date-Modified = {2010-07-17 19:00:33 +0200},
+	Editor = {Lynch, Christopher},
+	Keywords = {deep inference},
+	Note = {\url{http://drops.dagstuhl.de/opus/volltexte/2010/2649}},
+	Pages = {135--150},
+	Publisher = {Schloss Dagstuhl--Leibniz-Zentrum f{\"u}r Informatik},
+	Series = {Leibniz International Proceedings in Informatics (LIPIcs)},
+	Title = {A Proof Calculus Which Reduces Syntactic Bureaucracy},
+	Volume = {6},
+	Year = {2010}}
+
+@inproceedings{GuglGundStra::Breaking:uq,
+	Author = {Guglielmi, Alessio and Gundersen, Tom and Stra{\ss}burger, Lutz},
+	Booktitle = {25th Annual IEEE Symposium on Logic in Computer Science},
+	Date-Added = {2010-01-25 09:14:10 +0100},
+	Date-Modified = {2010-11-28 16:58:07 +0000},
+	Editor = {Jouannaud, Jean-Pierre},
+	Keywords = {deep inference},
+	Note = {\url{http://www.lix.polytechnique.fr/~lutz/papers/AFII.pdf}},
+	Pages = {284--293},
+	Publisher = {IEEE},
+	Title = {Breaking Paths in Atomic Flows for Classical Logic},
+	Year = {2010}}
 
 @misc{Gugl:09:th.pl:rz,
 	Author = {Guglielmi, Alessio},
@@ -525,44 +693,24 @@
 	Volume = {8},
 	Year = 2007}
 
-@unpublished{GuglStra:02:A-Non-co:dq,
+@article{GuglStra:02:A-Non-co:dq,
 	Author = {Guglielmi, Alessio and Stra{\ss}burger, Lutz},
-	Date-Modified = {2009-03-30 11:55:08 +0200},
+	Date-Modified = {2011-05-01 19:08:06 +0100},
+	Journal = {Mathematical Structures in Computer Science},
 	Keywords = {deep inference},
-	Note = {Submitted. \url{http://www.lix.polytechnique.fr/~lutz/papers/NEL-splitting.pdf}},
+	Note = {\url{http://www.lix.polytechnique.fr/~lutz/papers/NEL-splitting.pdf}},
+	Number = {3},
+	Pages = {563--584},
 	Title = {A System of Interaction and Structure {V}: {T}he Exponentials and Splitting},
-	Year = 2009}
-
-@unpublished{BrusGuglGundPari:09:Quasip:fk,
-	Author = {Bruscoli, Paola and Guglielmi, Alessio and Gundersen, Tom and Parigot, Michel},
-	Date-Added = {2009-03-25 12:29:53 +0100},
-	Date-Modified = {2009-04-05 09:28:13 +0200},
-	Keywords = {deep inference},
-	Note = {Accepted by LPAR-16. \url{http://cs.bath.ac.uk/ag/p/QPNDI.pdf}},
-	Title = {A Quasipolynomial Cut-Elimination Procedure in Deep Inference via Atomic Flows and Threshold Formulae},
-	Year = {2010}}
-
-@unpublished{GuglGundStra::Breaking:uq,
-	Author = {Guglielmi, Alessio and Gundersen, Tom and Stra{\ss}burger, Lutz},
-	Keywords = {deep inference},
-	Note = {Accepted by LICS 2010. \url{http://cs.bath.ac.uk/ag/p/BPAF.pdf}},
-	Title = {Breaking Paths in Atomic Flows for Classical Logic},
-	Year = {2010}}
-
-@unpublished{GuglGundPari::A-Proof-:fk,
-	Author = {Guglielmi, Alessio and Gundersen, Tom and Parigot, Michel},
-	Keywords = {deep inference},
-	Note = {Accepted by RTA 2010.},
-	Title = {A Proof Calculus Which Reduces Syntactic Bureaucracy},
-	Year = {2010}}
+	Volume = {21},
+	Year = 2011}
 
 @inproceedings{GuglStra:02:A-Non-co:lq,
 	Author = {Guglielmi, Alessio and Stra{\ss}burger, Lutz},
 	Booktitle = {LPAR 2002},
-	Date-Modified = {2009-06-12 06:34:12 +0200},
-	Editor = {M. Baaz and A. Voronkov},
+	Date-Modified = {2010-12-15 19:02:05 +0000},
+	Editor = {Baaz, Matthias and Voronkov, Andrei},
 	Keywords = {deep inference},
-	Month = {October},
 	Note = {\url{http://www.lix.polytechnique.fr/~lutz/papers/NEL.pdf}},
 	Pages = {231--246},
 	Publisher = {Springer-Verlag},
@@ -574,10 +722,9 @@
 @inproceedings{GuglStra:01:Non-comm:rp,
 	Author = {Guglielmi, Alessio and Stra{\ss}burger, Lutz},
 	Booktitle = {CSL 2001},
-	Date-Modified = {2006-07-13 13:12:57 +0100},
+	Date-Modified = {2010-07-17 19:47:50 +0200},
 	Editor = {L. Fribourg},
 	Keywords = {deep inference},
-	Month = {September},
 	Note = {\url{http://cs.bath.ac.uk/ag/p/NoncMELLCoS.pdf}},
 	Pages = {54--68},
 	Publisher = {Springer-Verlag},
@@ -621,8 +768,9 @@
 @phdthesis{Gund:09:A-Genera:kx,
 	Author = {Gundersen, Tom},
 	Date-Added = {2009-08-09 11:17:28 +0200},
-	Date-Modified = {2009-08-09 11:18:14 +0200},
+	Date-Modified = {2010-08-20 19:03:35 +0200},
 	Keywords = {deep inference},
+	Note = {\url{http://tel.archives-ouvertes.fr/docs/00/50/92/41/PDF/thesis.pdf}},
 	School = {University of Bath},
 	Title = {A General View of Normalisation Through Atomic Flows},
 	Year = {2009}}
@@ -785,9 +933,9 @@
 
 @inproceedings{Kahr:07:Maude-as:lr,
 	Author = {Kahramano{\u g}ullar{\i}, Ozan},
-	Booktitle = {Proceedings of the Eighth International Workshop on Rule Based Programming (RULE 2007)},
+	Booktitle = {Eighth International Workshop on Rule Based Programming (RULE 2007)},
 	Date-Added = {2007-06-26 09:53:26 +0100},
-	Date-Modified = {2008-11-25 08:19:18 +0100},
+	Date-Modified = {2010-07-17 18:32:57 +0200},
 	Editor = {J. Visser and V. Winter},
 	Keywords = {deep inference},
 	Note = {\url{http://www.doc.ic.ac.uk/~ozank/Papers/rule07.pdf}},
@@ -828,8 +976,8 @@
 @inproceedings{Kahr:04:Implemen:ct,
 	Address = {Universit\'e Henri Poincar\'e, Nancy, France},
 	Author = {Kahramano{\u g}ullar{\i}, Ozan},
-	Booktitle = {Proceedings of the ESSLLI 2004 Student Session},
-	Date-Modified = {2007-09-18 10:48:12 +0100},
+	Booktitle = {ESSLLI 2004 Student Session},
+	Date-Modified = {2010-07-17 18:33:19 +0200},
 	Keywords = {deep inference},
 	Note = {16th European Summer School in Logic, Language and Information. \url{http://www.doc.ic.ac.uk/~ozank/Papers/esslli04.pdf}},
 	Pages = {117--127},
@@ -869,8 +1017,8 @@
 @inproceedings{Kahr:06:Reducing:hc,
 	Author = {Kahramano{\u g}ullar{\i}, Ozan},
 	Booktitle = {LPAR 2006},
-	Date-Modified = {2009-09-30 19:02:19 +0200},
-	Editor = {M. Hermann and A. Voronkov},
+	Date-Modified = {2010-12-15 19:01:47 +0000},
+	Editor = {Hermann, Miki and Voronkov, Andrei},
 	Keywords = {deep inference},
 	Note = {\url{http://dx.doi.org/10.1007/11916277_19}},
 	Pages = {272--286},
@@ -934,8 +1082,8 @@
 @inproceedings{LamaStra:05:Construc:qq,
 	Author = {Lamarche, Fran{\c c}ois and Stra{\ss}burger, Lutz},
 	Booktitle = {20th Annual IEEE Symposium on Logic in Computer Science},
-	Date-Modified = {2007-10-10 10:46:59 +0100},
-	Editor = {Prakash Panangaden},
+	Date-Modified = {2010-11-28 16:58:07 +0000},
+	Editor = {Panangaden, Prakash},
 	Keywords = {deep inference},
 	Note = {\url{http://www.lix.polytechnique.fr/~lutz/papers/FreeBool-long.pdf}},
 	Pages = {209--218},
@@ -991,7 +1139,7 @@
 	Date-Modified = {2009-06-12 07:02:13 +0200},
 	Editor = {Ono, Hiroakira and Kanazawa, Makoto and de Queiroz, Ruy},
 	Keywords = {deep inference},
-	Note = {\url{http://users.rsise.anu.edu.au/~linda/postniece-dbi.pdf}},
+	Note = {\url{http://users.cecs.anu.edu.au/~linda/postniece-dbi.pdf}},
 	Pages = {320--334},
 	Publisher = {Springer-Verlag},
 	Series = {Lecture Notes in Computer Science},
@@ -1012,6 +1160,29 @@
 	Title = {Canonical Abstract Syntax Trees},
 	Volume = {176},
 	Year = {2007}}
+
+@inproceedings{Rove:11:Linear-L:kx,
+	Author = {Roversi, Luca},
+	Booktitle = {Typed Lambda Calculi and Applications},
+	Date-Added = {2011-05-04 18:35:05 +0100},
+	Date-Modified = {2011-05-04 18:37:10 +0100},
+	Editor = {Ong, Luke},
+	Keywords = {deep inference},
+	Note = {\url{http://www.di.unito.it/~rover/RESEARCH/PUBLICATIONS/2011-TLCA/Roversi2011TLCA.pdf}},
+	Pages = {184--197},
+	Publisher = {Springer-Verlag},
+	Series = {Lecture Notes in Computer Science},
+	Title = {Linear Lambda Calculus and Deep Inference},
+	Volume = {6690},
+	Year = {2011}}
+
+@unpublished{Rove::Linear-L:fk,
+	Author = {Roversi, Luca},
+	Date-Added = {2010-11-28 16:09:08 +0000},
+	Date-Modified = {2011-01-25 16:45:22 +0000},
+	Keywords = {deep inference},
+	Note = {\url{http://arxiv.org/pdf/1011.3668}},
+	Title = {Linear Lambda Calculus with Explicit Substitutions as Proof-Search in Deep Inference}}
 
 @inproceedings{StewStou:05:A-System:tg,
 	Author = {Stewart, Charles and Stouppa, Phiniki},
@@ -1047,6 +1218,31 @@
 	Volume = {85},
 	Year = {2007}}
 
+@unpublished{Stra:11:Towards-:fk,
+	Author = {Stra{\ss}burger, Lutz},
+	Date-Added = {2011-01-17 14:26:13 +0000},
+	Date-Modified = {2011-01-17 14:27:45 +0000},
+	Keywords = {deep inference},
+	Note = {Habilitation Thesis. \url{http://www.lix.polytechnique.fr/~lutz/papers/HDR.pdf}},
+	School = {Universit{\'e} Paris VII - Denis Diderot},
+	Title = {Towards a Theory of Proofs of Classical Logic},
+	Year = {2011}}
+
+@inproceedings{Stra:10:What-Is-:fk,
+	Author = {Stra{\ss}burger, Lutz},
+	Booktitle = {Programs, Proofs, Processes---6th Conference on Computability in Europe},
+	Date-Added = {2010-07-17 18:29:43 +0200},
+	Date-Modified = {2010-07-17 18:43:41 +0200},
+	Editor = {Ferreira, Fernando and L{\"o}we, Benedikt and Mayordomo, Elvira and Mendes Gomes, Lu{\'\i}s},
+	Keywords = {deep inference},
+	Note = {\url{http://www.lix.polytechnique.fr/~lutz/papers/CiE10.pdf}},
+	Pages = {406--416},
+	Publisher = {Springer-Verlag},
+	Series = {Lecture Notes in Computer Science},
+	Title = {What Is the Problem with Proof Nets for Classical Logic?},
+	Volume = {6158},
+	Year = {2010}}
+
 @article{Stra:09:From-Dee:fr,
 	Author = {Stra{\ss}burger, Lutz},
 	Date-Added = {2009-09-03 08:25:28 +0200},
@@ -1057,14 +1253,15 @@
 	Title = {From Deep Inference to Proof Nets via Cut Elimination},
 	Year = 2009}
 
-@unpublished{StraGugl:09:A-System:vn,
+@article{StraGugl:09:A-System:vn,
 	Author = {Stra{\ss}burger, Lutz and Guglielmi, Alessio},
 	Date-Added = {2009-03-30 09:16:04 +0200},
-	Date-Modified = {2009-03-30 11:54:52 +0200},
+	Date-Modified = {2011-01-25 16:40:46 +0000},
+	Journal = {ACM Transactions on Computational Logic},
 	Keywords = {deep inference},
-	Note = {Submitted. \url{http://www.lix.polytechnique.fr/~lutz/papers/NEL-decomposition.pdf}},
+	Note = {In press. \url{http://arxiv.org/pdf/0903.5259}},
 	Title = {A System of Interaction and Structure {IV}: {T}he Exponentials and Decomposition},
-	Year = {2009}}
+	Year = {2010}}
 
 @unpublished{Stra:08:Extensio:kk,
 	Author = {Stra{\ss}burger, Lutz},
@@ -1152,8 +1349,8 @@
 
 @inproceedings{Stra:07:A-Charac:fk,
 	Author = {Stra{\ss}burger, Lutz},
-	Booktitle = {RTA 2007},
-	Date-Modified = {2007-10-10 11:15:47 +0100},
+	Booktitle = {Term Rewriting and Applications---18th International Conference, RTA},
+	Date-Modified = {2010-07-17 18:52:57 +0200},
 	Editor = {Baader, Franz},
 	Keywords = {deep inference},
 	Note = {\url{http://www.lix.polytechnique.fr/~lutz/papers/CharMedial.pdf}},
@@ -1207,8 +1404,8 @@
 @inproceedings{Stra:02:A-Local-:ul,
 	Author = {Stra{\ss}burger, Lutz},
 	Booktitle = {LPAR 2002},
-	Date-Modified = {2009-06-12 06:34:29 +0200},
-	Editor = {M. Baaz and A. Voronkov},
+	Date-Modified = {2010-12-15 19:00:35 +0000},
+	Editor = {Baaz, Matthias and Voronkov, Andrei},
 	Keywords = {deep inference},
 	Note = {\url{http://www.lix.polytechnique.fr/~lutz/papers/lls-lpar.pdf}},
 	Pages = {388--402},
@@ -1257,10 +1454,10 @@
 @inproceedings{Tiu:06:A-Local-:gf,
 	Author = {Tiu, Alwen},
 	Booktitle = {LPAR 2006},
-	Date-Modified = {2009-06-12 06:34:34 +0200},
-	Editor = {M. Hermann and A. Voronkov},
+	Date-Modified = {2010-12-15 19:01:25 +0000},
+	Editor = {Hermann, Miki and Voronkov, Andrei},
 	Keywords = {deep inference},
-	Note = {\url{http://users.rsise.anu.edu.au/~tiu/localint.pdf}},
+	Note = {\url{http://users.cecs.anu.edu.au/~tiu/localint.pdf}},
 	Pages = {242--256},
 	Publisher = {Springer-Verlag},
 	Series = {Lecture Notes in Computer Science},
@@ -1285,7 +1482,7 @@
 	Date-Modified = {2006-07-13 13:12:58 +0100},
 	Institution = {Technische Universit{\"a}t Dresden},
 	Keywords = {deep inference},
-	Note = {\url{http://users.rsise.anu.edu.au/~tiu/thesisc.pdf}},
+	Note = {\url{http://users.cecs.anu.edu.au/~tiu/thesisc.pdf}},
 	Number = {WV-01-06},
 	Title = {Properties of a Logical System in the Calculus of Structures},
 	Year = 2001}
@@ -1295,7 +1492,7 @@
 	Date-Modified = {2006-07-13 13:12:54 +0100},
 	Institution = {Technische Universit{\"a}t Dresden},
 	Keywords = {deep inference},
-	Note = {\url{http://users.rsise.anu.edu.au/~tiu/a1.ps.gz}},
+	Note = {\url{http://users.cecs.anu.edu.au/~tiu/a1.ps.gz}},
 	Number = {WV-01-08},
 	Title = {{A1}-Unification},
 	Year = 2001}
@@ -1305,7 +1502,7 @@
 	Date-Modified = {2006-07-13 13:12:55 +0100},
 	Institution = {Technische Universit{\"a}t Dresden},
 	Keywords = {deep inference},
-	Note = {\url{http://users.rsise.anu.edu.au/~tiu/comb4.ps.gz}},
+	Note = {\url{http://users.cecs.anu.edu.au/~tiu/comb4.ps.gz}},
 	Number = {WV-01-09},
 	Title = {Combining {A1}- and {AC1}-Unification Sharing Unit},
 	Year = 2001}
